feat: Add children data view and template with search functionality

--- a/myproject/accounts/templates/admin_dashboard.html
+++ b/myproject/accounts/templates/admin_dashboard.html
@@ -29,7 +29,7 @@
                 <a href="{% url 'user_management' %}" id="userManagementButton" class="flex items-center space-x-2 text-black font-medium hover:text-pink-500">
                     <span>👥</span> <span>User Management</span>
                 </a>
-                <a href="{% url 'childrecord' %}" id="childrenDataButton" class="flex items-center space-x-2 text-black font-medium hover:text-pink-500">
+                <a href="{% url 'children_data' %}" id="childrenDataButton" class="flex items-center space-x-2 text-black font-medium hover:text-pink-500">
                     <span>📈</span> <span>Children Data</span>
                 </a>
                 <a href="{% url 'changeuser' %}" id="userSettingsButton" class="flex items-center space-x-2 text-black font-medium hover:text-pink-500">
