--- a/myproject/accounts/templates/changeuser.html
+++ b/myproject/accounts/templates/changeuser.html
@@ -71,7 +71,11 @@
             </form>
 
             <div class="flex justify-center mt-4">
-                <a href="{% url 'dashboard' %}" class="w-full px-4 py-2 bg-gray-500 text-white text-center rounded hover:bg-gray-600 transition duration-300">Back to Dashboard</a>
+                {% if user.is_superuser %}
+                    <a href="{% url 'admin_dashboard' %}" class="w-full px-4 py-2 bg-gray-500 text-white text-center rounded hover:bg-gray-600 transition duration-300">Back to Admin Dashboard</a>
+                {% elif user.is_staff %}
+                    <a href="{% url 'dashboard' %}" class="w-full px-4 py-2 bg-gray-500 text-white text-center rounded hover:bg-gray-600 transition duration-300">Back to Dashboard</a>
+                {% endif %}
             </div>
         </div>
     </div>
