--- a/myproject/accounts/templates/medication_list.html
+++ b/myproject/accounts/templates/medication_list.html
@@ -20,8 +20,9 @@
             <input type="text" id="search" placeholder="Search by Name or ID" 
             class="border border-pink-500 p-3 rounded-md text-black-500 w-full md:w-6/6 focus:ring-2 focus:ring-pink-400 focus:outline-none">
             <div class="flex w-full justify-between md:justify-end gap-4">
-            <a href="{% url 'dashboard' %}" class="bg-gray-500 text-white px-6 py-3 rounded-md hover:bg-gray-600 transition text-center">
-                Back to Dashboard
+            <a href="{% if request.GET.from == 'growth_data' %}{% url 'growth_data' child_id %}{% else %}{% url 'dashboard' %}{% endif %}" 
+               class="bg-gray-500 text-white px-6 py-3 rounded-md hover:bg-gray-600 transition text-center">
+                Back
             </a>
             <button id="addChildBtn" class="bg-pink-500 text-white px-6 py-3 rounded-md hover:bg-pink-600 transition">
                 Add New Medication
