--- a/myproject/accounts/templates/growth_data.html
+++ b/myproject/accounts/templates/growth_data.html
@@ -10,7 +10,7 @@
 
     <div class="w-full max-w-7xl bg-white shadow-lg rounded-lg p-12 relative">
         <div class="absolute top-6 right-6 flex gap-6">
-            <a href="{% if request.GET.from == 'growth_data' %}{% url 'growth_data' child_id %}{% else %}{% url 'dashboard' %}{% endif %}" 
+            <a href="{% if request.GET.from == 'growth_data' %}{% url 'growth_data' child_id %}{% else %}{% url 'childrecord' %}{% endif %}" 
                class="bg-gray-500 text-white px-6 py-3 rounded-md hover:bg-gray-600 transition text-center">
                 Back
             </a>
