fix: Update register button to use inline onclick for navigation

--- a/myproject/accounts/templates/childrecord.html
+++ b/myproject/accounts/templates/childrecord.html
@@ -20,7 +20,8 @@
                     class="bg-pink-500 text-white px-6 py-3 rounded hover:bg-pink-600">
                     Back
                 </button>  
-                <button id="registerBtn" class="bg-pink-500 text-white px-6 py-3 rounded hover:bg-pink-600 ml-4">
+                <button onclick="window.location.href='{% url 'registerchild' %}'" 
+                        class="bg-pink-500 text-white px-6 py-3 rounded hover:bg-pink-600 ml-4">
                     Register New Child
                 </button>
             </div>
