--- a/myproject/accounts/templates/children_data.html
+++ b/myproject/accounts/templates/children_data.html
@@ -20,6 +20,10 @@
                     class="bg-pink-500 text-white px-6 py-3 rounded hover:bg-pink-600">
                     Back
                 </button>
+                <button onclick="window.print()" 
+                    class="bg-blue-500 text-white px-6 py-3 rounded hover:bg-blue-600 ml-4">
+                    Print
+                </button>
             </div>
         </div>
         <h3 class="text-2xl font-bold mt-4 text-center text-gray-800 text-3xl">
