--- a/myproject/accounts/templates/growth_record.html
+++ b/myproject/accounts/templates/growth_record.html
@@ -36,7 +36,7 @@
                         <th class="border border-gray-500 px-6 py-4 font-semibold text-center">Weight</th>
                         <th class="border border-gray-500 px-6 py-4 font-semibold text-center">Height</th>
                         <th class="border border-gray-500 px-6 py-4 font-semibold text-center">HC</th>
-                        <th class="border border-gray-500 px-6 py-4 font-semibold text-center">CCT</th>
+                        <th class="border border-gray-500 px-6 py-4 font-semibold text-center">CC</th>
                         <th class="border border-gray-500 px-6 py-4 font-semibold text-center">Teeth</th>
                         <th class="border border-gray-500 px-6 py-4 font-semibold text-center">Actions</th>
                     </tr>
