Adds "Growth Record" button to growth data page
Introduces a new button linking to the "Growth Record" page for a child. Enhances navigation by including a query parameter to track the origin of the request.

Improves user experience by providing quick access to growth records.

--- a/myproject/accounts/templates/growth_data.html
+++ b/myproject/accounts/templates/growth_data.html
@@ -73,6 +73,12 @@
                             Illness List
                         </button>
                     </li>
+                    <li>
+                        <button onclick="window.location.href='{% url 'growth_record_child' child.id %}?from=growth_data'" 
+                                class="bg-pink-500 text-white px-6 py-3 rounded-lg text-lg hover:bg-pink-600">
+                            Growth Record
+                        </button>
+                    </li>
                 </ul>
             </div>
         </div>
