--- a/myproject/accounts/templates/growth_record.html
+++ b/myproject/accounts/templates/growth_record.html
@@ -175,8 +175,8 @@
                 growthChartTitle.textContent = `Growth Chart for ${childName}`;
 
                 const growthData = {
-                    labels: ['Jan', 'Feb', 'Mar', 'Apr', 'May'], //SAMPLE VALUES ONLY!
-                    bmi: [15, 16, 17, 18, 19], //SAMPLE VALUES ONLY!
+                    labels: ['Jan', 'Feb', 'Mar', 'Apr', 'May'], //not finished
+                    bmi: [15, 16, 17, 18, 19], //not finished
                 };
 
                 if (growthChart) {
