--- a/myproject/accounts/templates/health_profile.html
+++ b/myproject/accounts/templates/health_profile.html
@@ -8,11 +8,11 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-100 text-gray-800">
-    <header class="bg-pink-500 flex justify-center py-6">
+    <header class="bg-pink-500 flex justify-center items-center h-20">
         <img
-            alt="Gentle Hands Inc. logo with two handprints, one pink and one green, above the text Gentle Hands, Inc."
-            class="h-10"
-            src="{% static 'logo.jpg' %}"
+            alt="Gentle Hands"
+            class="h-16"
+            src="{% static 'logo-no-bg.png' %}"
         />
     </header>
     <main class="max-w-7xl mx-auto px-6 py-8">
